--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,22 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ site.title }}</title>
 
-  <!-- Inclure MathJax via le CDN -->
-  <script type="text/javascript" async
-    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
-  </script>
-
-  <!-- Configurer MathJax -->
-  <script type="text/javascript">
-    window.MathJax = {
-      tex: {
-        inlineMath: [['$', '$'], ['\\(', '\\)']],
-        displayMath: [['$$', '$$'], ['\\[', '\\]']]
-      },
-      options: {
-        enableMenu: false  // Désactiver le menu contextuel de MathJax
-      }
-    };
-  </script>
+  <!-- MathJax v3 – version "tout inclus" qui marche direct avec \[ \], \( \), $$ -->
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
 </head>
 
